#

WARNING:
WARNING: This is a development release, not for production usage!
WARNING:




Please read the README.SETUP file for initial installation
instructions or use the OBS Appliance from

  http://openbuildservice.org/download/

There is also an install medium with installs OBS on hard disc now.

dist/README.UPDATERS file has informations for updaters.

OBS Appliance users who have setup their LVM can just replace 
their appliance image without data loss. The migration will 
happen automatically.


Features
========

 * support tracking of github issues
 * instantiate package api call for projects building service packs 
 * running source service during build time
 * Add support to use docker as virtualization engine
 * Added support for simple image creation
 * New option to avoid usage of defined repositories when branching a package
   via the OBS:BranchSkipRepositories attribute

Changes on purpose:
===================

 * Users are allowed to add themself in their home project, even when they got removed.
   Admins should use the user state and set them to "locked" when they do want to block them.
 * request "addrevision" option is using unexpanded revision when "updatelink" option is used

Incompatible changes:
=====================

 * 

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start
