@@ -5,8 +5,6 @@ class Architecture < ActiveRecord::Base
   has_many :repository_architectures, inverse_of: :architecture
   has_many :repositories, :through => :repository_architectures
 
-  has_many :downloads
-
   has_many :flags
 
   validates_uniqueness_of :name
