@@ -7,6 +7,7 @@ class Repository < ActiveRecord::Base
   has_many :channel_targets, :class_name => "ChannelTarget", :dependent => :delete_all, :foreign_key => 'repository_id'
   has_many :release_targets, :class_name => "ReleaseTarget", :dependent => :delete_all, :foreign_key => 'repository_id'
   has_many :path_elements, -> { order("position") }, foreign_key: 'parent_id', dependent: :delete_all, inverse_of: :repository
+  has_many :download_repositories, :dependent => :delete_all, foreign_key: :repository_id
   has_many :links, :class_name => "PathElement", :foreign_key => 'repository_id', inverse_of: :link
   has_many :targetlinks, :class_name => "ReleaseTarget", :foreign_key => 'target_repository_id'
   has_one :hostsystem, :class_name => "Repository", :foreign_key => 'hostsystem_id'
